# mbti-type-detector

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.sh
docs/: mkdocs.yml
docs/docs/: index.md
mbti_personality_detector/: __init__.py  dataset.py  features.py  plots.py
mbti_personality_detector/modeling/: predict.py  train.py
models/: train.py
notebooks/: train.ipynb
